--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
   "publishConfig": {
     "access": "public"
   },
+  "resolutions": {
+    "ini": "1.3.7",
+    "kind-of@^6.0.0": "6.0.3"
+  },
   "scripts": {
     "build": "yarn clean; tsc",
     "check-licenses": "node bin/check-licenses.js",
@@ -57,12 +61,12 @@
     "@types/jest": "24.0.15",
     "@types/node": "12.0.10",
     "@types/tiny-async-pool": "1.0.0",
-    "jest": "24.8.0",
+    "jest": "26.6.3",
     "prettier": "2.0.5",
-    "ts-jest": "24.3.0",
+    "ts-jest": "26.4.4",
     "ts-node": "8.8.1",
     "tslint": "5.18.0",
     "tslint-config-prettier": "1.18.0",
-    "typescript": "3.7.5"
+    "typescript": "4.1.3"
   }
 }
