--- a/package.json
+++ b/package.json
@@ -48,10 +48,10 @@
     "datadog-metrics": "0.9.3",
     "dd-trace": "0.35.1-beta.1",
     "deep-extend": "0.6.0",
-    "fast-xml-parser": "^3.19.0",
+    "fast-xml-parser": "3.19.0",
     "form-data": "3.0.0",
     "glob": "7.1.4",
-    "proxy-agent": "4.0.1",
+    "proxy-agent": "5.0.0",
     "simple-git": "2.31.0",
     "ssh2": "1.4.0",
     "ssh2-streams": "0.4.10",
