--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
     "ajv": "^8.12.0",
     "ajv-formats": "^2.1.1",
     "async-retry": "1.3.1",
-    "axios": "1.6.0",
+    "axios": "^1.6.5",
     "chalk": "3.0.0",
     "clipanion": "^3.2.1",
     "datadog-metrics": "0.9.3",
